fixed spacing for CSS files

--- a/youtube-styles/header.css
+++ b/youtube-styles/header.css
@@ -1,9 +1,3 @@
-/* .search-bar{
-  display: block;
-  font-size: 20px;
-} */
-
-
 .header{
   height: 55px;
   display: flex;
@@ -19,7 +13,6 @@
   border-bottom-color: rgb(228, 228, 228);
   z-index: 100;
 
-  
 }
 
 .left-section{
@@ -27,18 +20,20 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
 }
 
 .hamburger-menu{
   height: 24px;
   margin-left: 24px;
   margin-right: 20px;
+
 }
 
 .youtube-logo{
   height: 20px;
-}
 
+}
 
 .middle-section{
   flex: 1;
@@ -48,6 +43,7 @@
   display: flex;
   align-items: center;
   flex-direction: row;
+
 }
 
 .search-bar{
@@ -62,10 +58,12 @@
   border-radius: 2px;
   box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
   width: 0;
+
 }
 
 .search-bar::placeholder{
   font-size: 16px;
+
 }
 
 .search-button, 
@@ -110,6 +108,7 @@
   opacity: 0;
   pointer-events: none;
   white-space: nowrap;
+
 }
 
 .search-button:hover .tooltip,
@@ -122,12 +121,9 @@
 
 }
 
-
-
 .search-icon{
   height: 25px;
   
-
 }
 
 .voice-search-button{
@@ -136,14 +132,13 @@
   border-radius: 20px;
   border: none;
   background-color: rgb(248, 248, 248);
+
 }
 
 .voice-search-icon{
   height: 24px;
   
-  
 }
-
 
 .right-section{
   width: 180px;
@@ -151,21 +146,22 @@
   align-items: center;
   justify-content: space-between;
   flex-shrink: 0;
-}
 
+}
 
 .upload-icon{
   height: 24px;
-}
 
+}
 
 .youtube-apps-icon{
   height: 24px;
-}
 
+}
 
 .notifications-icon{
   height: 24px;
+
 }
 
 .notifications-icon-container{
@@ -188,9 +184,9 @@
 
 }
 
-
 .current-user-picture{
   height: 32px;
   border-radius: 16px;
   margin-right: 20px;
+
 }
