--- a/youtube-styles/video.css
+++ b/youtube-styles/video.css
@@ -3,34 +3,30 @@
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 16px;
   row-gap: 40px;
-  
 
 }
-
 
 @media (max-width: 750px) {
   .video-grid{
     grid-template-columns: 1fr 1fr;
   }
+
 }
 
 @media (min-width: 1000px) {
   .video-grid{
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
-}
 
+}
 
 @media (min-width: 751px) and (max-width: 999px){
   .video-grid{
     grid-template-columns: 1fr 1fr 1fr;
   }
+
 }
 
-
-
-.video-preview{
-}
 .thumbnail-row{
   margin-bottom: 8px;
   position: relative;
@@ -52,26 +48,20 @@
 
 .thumbnail{
   width: 100%;
+
 }
 
 .video-info-grid{
   display:grid;
   grid-template-columns: 50px 1fr;
-}
 
-.channel-pic{
-
-  
 }
 
 .pfp{
   width: 36px;
   border-radius: 50%;
   vertical-align: top;
-  
-}
 
-.video-info{
   
 }
 
@@ -91,9 +81,9 @@
   
 }
 
-
 .video-stats{
   font-size: 12px;
   color: rgb(96, 96, 96);
   margin-bottom: 4px;
+  
 }
